# govAI

./: .env.example  .gitattributes  .gitignore  05:11:2026-infrastructure-remote-access.md  05:12:2026-infrastructure-why-bash-shell.md  CITATION.cff  CLAUDE.md  LICENSE  README.md  sync_notes.sh
pipeline_v7/: .env.example  04b_classificar_epi_llm.py  06b_treinar_epi.py  09_exportar_csv_consolidado.R  CHANGELOG.md  INSTALL.md  README.md  RELATORIO_AUDITORIA_ROUND2.md  RELATORIO_AUDITORIA_ROUND3.md  RELATORIO_AUDITORIA_ROUND4.md  RELATORIO_AUDITORIA_v5.md  check_env.py  pyproject.toml  requirements.txt
pipeline_v7/codigo/Pré-teste posturas epistemológicas/: 1_Protocolo_Calibracao_Epi_v2.docx  2 (Para Fernando) Tutorial_Calibracao_Epi_v2.docx  3_Guia_Anotacao_Posturas_v4_1.docx  README_preteste_epi.md  govai_calibracao_colab.ipynb  govai_pilot_colab.ipynb  sample.csv  ~$otocolo_piloto_tipologia.docx
pipeline_v7/codigo/python/: 01a_coleta_openalex.py  02_limpeza_estrutural.py  02b_detectar_retracoes.py  02c_dedup_fuzzy.py  02d_extrair_autores.py  02f_extrair_referencias.py  04a_classificar_clusters_llm.py  04c_amostrar_para_label_studio.py  06a_treinar_clusters.py  07_aplicar_modelo.py
pipeline_v7/codigo/r/: 03_limpeza_textual.R  07c_extrair_termos.R  07d_rede_coautoria.R  07e_07f_redes_citacao.R  (+4 more)
pipeline_v7/protocolo/: lexico_clusters.csv
pipeline_v7/tests/: crossval_report.json  test_adversarial_round3.py  test_contrato_gs_06.py  test_end_to_end.py  test_error_paths_round4.py  test_metrics_crossvalidation.py  test_thresholds_centralizados.py  test_type_roundtrip.py
(+62 files in other folders)
