[project]
name = "govai-pipeline"
version = "5.0.0"
description = "Pipeline de classificação cientométrica — Campo de Produção da Governança Digital"
requires-python = ">=3.10"

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = ["tests/__pycache__", "**/__pycache__"]

[tool.ruff.lint]
# E/F/W: erros, Pyflakes, warnings — todos obrigatórios
# E702 ignorado: duplas atribuições alinhadas em derivar_postura_vetorizado (07)
#               são estilo intencional (espelham o if/elif escalar para legibilidade)
select = ["E", "F", "W"]
ignore = ["E501", "E702"]

[tool.ruff.lint.per-file-ignores]
# utils/metrics_manual.py é legado de referência — imports e estilo não são críticos
"codigo/python/utils/metrics_manual.py" = ["F401", "E"]
